# velocity

./: Cargo.toml
src/: config.rs  launcher.rs  main.rs  recent_files.rs  system_stats.rs
src/ascii_globe/: camera.rs  math.rs  mod.rs  renderer.rs  texture.rs
src/ui/: app.rs  mod.rs  theme.rs
src/ui/components/: curve_menu.rs  curved_menu.rs  globe.rs  mod.rs  progress_bar.rs  stars.rs
src/ui/views/: apps.rs  home.rs  mod.rs  recent.rs  settings.rs
text/: Cargo.toml  README.md  extract_glyphs  font.json
text/examples/: ansi_compact.rs  mini.rs  simple.rs
text/src/: builder.rs  font.rs  lib.rs  loader.rs  renderer.rs
