[package]
name = "velocity"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.27"
crossterm = "0.28"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.30"
dirs = "5.0"
ctrlc = "3.4"
anyhow = "1.0"
chrono = "0.4"
text2artfont = { path = "text" }
rand = "0.8"