[package]
name = "text2artfont"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]
description = "Convert text to ASCII art using custom fonts"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/text2artfont"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.8"

[[example]]
name = "simple"
path = "examples/simple.rs"

[[example]]
name = "ansi_compact"
path = "examples/ansi_compact.rs"
